Bug 1486958 - Sync FlushRendering() only during resizing on windows r=mattwoodrow